ajuste nas rotas

--- a/src/app/components/jogar/jogar.component.html
+++ b/src/app/components/jogar/jogar.component.html
@@ -1,10 +1,9 @@
-<p>jogar works!</p>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>Stopalavras</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="jogar.component.css">
   <!-- Fonte Caviar Dreams do Google Fonts alternativa similar -->
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
