Ajustes nas imagens da home e favicon.ico

--- a/src/app/components/configuracoes/configuracoes.component.html
+++ b/src/app/components/configuracoes/configuracoes.component.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Stopalavras</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="configuracoes.component.css">
   <!-- Fonte Caviar Dreams do Google Fonts alternativa similar -->
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
@@ -10,10 +11,17 @@
 <body>
   <div class="container">
     <div class="top-content">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Stop_sign_light_red.svg/200px-Stop_sign_light_red.svg.png" alt="Placa de Stop" class="stop-sign">
+      <img src="assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
       <h1 class="title">Stopalavras</h1>
     </div>
-    <button class="start-button">Iniciar</button>
+    <div class="buttons-container">
+      <div>
+        <button class="start-button">Iniciar</button>
+      </div>
+      <div>
+        <button class="config-button">Configurações</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
