--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Stopalavras</title>
-  <link rel="icon" type="image/x-icon" href="../../../../public/favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="home.component.css">
   <!-- Fonte Caviar Dreams do Google Fonts alternativa similar -->
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="top-content">
-      <img src="../../../assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
+      <img src="assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
       <h1 class="title">Stopalavras</h1>
     </div>
     <div class="buttons-container">
