--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: -8px;
   background-color: #334aff;
   font-family: 'Quicksand', sans-serif; /* Alternativa à Caviar Dreams */
   display: flex;
