configuracao de rotas dos botoes, ajustes no css da home e configuracoes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,12 +11,12 @@
 <body>
   <div class="container">
     <div class="top-content">
-      <img src="assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
+      <img routerLink="/home" src="assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
       <h1 class="title">Stopalavras</h1>
     </div>
     <div class="buttons-container">
-      <button class="start-button">Iniciar</button>
-      <button class="config-button">Configurações</button>
+      <button class="start-button" routerLink="/jogar">Iniciar</button>
+      <button class="config-button" routerLink="/configuracoes">Configurações</button>
     </div>
   </div>
 </body>
