--- a/src/app/components/configuracoes/configuracoes.component.html
+++ b/src/app/components/configuracoes/configuracoes.component.html
@@ -11,15 +11,15 @@
 <body>
   <div class="container">
     <div class="top-content">
-      <img src="assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
+      <img routerLink="/home" src="assets/images/stop_sign.png" alt="Placa de Stop" class="stop-sign">
       <h1 class="title">Stopalavras</h1>
     </div>
     <div class="buttons-container">
       <div>
-        <button class="start-button">Iniciar</button>
+        <button class="start-button">Cronômetro</button>
       </div>
       <div>
-        <button class="config-button">Configurações</button>
+        <button class="config-button">Temas</button>
       </div>
     </div>
   </div>
