--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -23,6 +23,7 @@ body {
 .stop-sign {
   width: 200px;
   height: 200px;
+  cursor: pointer;
 }
 
 .title {
@@ -31,27 +32,31 @@ body {
 }
 
 .buttons-container {
-  display: flex;
+  display: block;
+  margin-top: 70px;
 }
 
 .start-button {
-  padding: 10px 20px;
+  padding: 10px 45px;
   font-size: 1.2rem;
   font-family: "Quicksand", sans-serif;
-  background-color: red;
+  background-color: #bf0808;
   color: white;
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  float: left;
+  margin-left: 30px;
 }
 
 .config-button {
   padding: 10px 20px;
   font-size: 1.2rem;
   font-family: "Quicksand", sans-serif;
-  background-color: red;
+  background-color: #bf0808;
   color: white;
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  float:right;
 }
