--- a/src/app/components/jogar/jogar.component.css
+++ b/src/app/components/jogar/jogar.component.css
@@ -31,11 +31,12 @@ body {
 }
 
 .buttons-container {
-  display: flex;
+  display: block;
+  margin-top: 70px;
 }
 
 .start-button {
-  padding: 10px 20px;
+  padding: 10px 45px;
   font-size: 1.2rem;
   font-family: "Quicksand", sans-serif;
   background-color: red;
@@ -43,6 +44,8 @@ body {
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  float: left;
+  margin-left: 30px;
 }
 
 .config-button {
@@ -54,4 +57,5 @@ body {
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  float:right;
 }
