--- a/src/app/components/configuracoes/configuracoes.component.css
+++ b/src/app/components/configuracoes/configuracoes.component.css
@@ -10,6 +10,8 @@ body {
 
 .container {
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .top-content {
@@ -32,11 +34,11 @@ body {
 }
 
 .buttons-container {
-  display: block;
+  display: flex;
   margin-top: 70px;
 }
 
-.start-button {
+.botao-cronometro {
   padding: 10px 30px;
   font-size: 1.2rem;
   font-family: "Quicksand", sans-serif;
@@ -49,7 +51,7 @@ body {
   margin-left: 30px;
 }
 
-.config-button {
+.botao-temas {
   padding: 10px 45px;
   font-size: 1.2rem;
   font-family: "Quicksand", sans-serif;
@@ -59,4 +61,12 @@ body {
   border-radius: 8px;
   cursor: pointer;
   float:right;
+  margin-left: 110px;
+}
+
+.exibicao-cronometro {
+  color: white;
+  font-size: 1.2rem;
+  margin-left: -370px;
+  margin-top: 35px;
 }
