--- a/src/app/components/configuracoes/configuracoes.component.css
+++ b/src/app/components/configuracoes/configuracoes.component.css
@@ -70,3 +70,9 @@ body {
   margin-left: -370px;
   margin-top: 35px;
 }
+
+.exibicao-tema {
+  color: white;
+  font-size: 1.2rem;
+  margin-top: 35px;
+}
