--- a/src/app/components/configuracoes/configuracoes.component.css
+++ b/src/app/components/configuracoes/configuracoes.component.css
@@ -10,16 +10,15 @@ body {
 
 .container {
   text-align: center;
-  display: flex;
-  flex-direction: column;
+  position:absolute;
+  top: 0%;
+  left: 40%;
 }
 
 .top-content {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 20px;
-  margin-bottom: 20px;
 }
 
 .stop-sign {
@@ -35,7 +34,8 @@ body {
 
 .buttons-container {
   display: flex;
-  margin-top: 70px;
+  position: absolute;
+  top: 30%;
 }
 
 .botao-cronometro {
