--- a/src/app/components/configuracoes/configuracoes.component.css
+++ b/src/app/components/configuracoes/configuracoes.component.css
@@ -9,6 +9,8 @@ body {
 }
 
 .container {
+  display: grid;
+  max-width: 400px;
   text-align: center;
   position:absolute;
   top: 0%;
@@ -33,7 +35,8 @@ body {
 }
 
 .buttons-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   position: absolute;
   top: 30%;
 }
@@ -64,15 +67,41 @@ body {
   margin-left: 110px;
 }
 
+.botao-definir {
+  padding: 10px 45px;
+  font-size: 1.2rem;
+  font-family: "Quicksand", sans-serif;
+  background-color: #bf0808;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  float:right;
+  margin-left: 110px;
+}
+
+.botao-salvar {
+  padding: 10px 45px;
+  font-size: 0.8rem;
+  font-family: "Quicksand", sans-serif;
+  background-color: #b8a8a8;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.colunas{
+  display: grid;
+  grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr;
+  position: absolute;
+}
+
 .exibicao-cronometro {
   color: white;
   font-size: 1.2rem;
-  margin-left: -370px;
-  margin-top: 35px;
 }
 
 .exibicao-tema {
   color: white;
   font-size: 1.2rem;
-  margin-top: 35px;
 }
