--- a/src/app/components/configuracoes/configuracoes.component.css
+++ b/src/app/components/configuracoes/configuracoes.component.css
@@ -36,9 +36,8 @@ body {
 
 .buttons-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  position: absolute;
-  top: 30%;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  margin-top: -150px;
 }
 
 .botao-cronometro {
@@ -50,8 +49,15 @@ body {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  float: left;
   margin-left: 30px;
+  width: 75%;
+}
+
+.exibicao-cronometro {
+  color: white;
+  font-size: 1.2rem;
+  margin-left: 30px;
+  margin-top: 40px;
 }
 
 .botao-temas {
@@ -63,8 +69,15 @@ body {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  float:right;
-  margin-left: 110px;
+  margin-left: 80px;
+  width: 75%;
+}
+
+.exibicao-tema {
+  color: white;
+  font-size: 1.2rem;
+  margin-top: 40px;
+  margin-left: 140px;
 }
 
 .botao-definir {
@@ -76,40 +89,24 @@ body {
   border: none;
   border-radius: 8px;
   float:right;
-  margin-left: 110px;
+  margin-right: 30px;
+  width: 75%;
 }
 
 .botao-salvar {
   padding: 10px 45px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-family: "Quicksand", sans-serif;
   background-color: #b8a8a8;
   color: rgb(0, 0, 0);
   border: none;
   border-radius: 8px;
   cursor: pointer;
-}
-
-.colunas{
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1.5fr));
-  position: absolute;
-}
-
-.exibicao-cronometro {
-  color: white;
-  font-size: 1.2rem;
-  float: inline-start;
-  margin-left: 30px;
-}
-
-.exibicao-tema {
-  color: white;
-  font-size: 1.2rem;
-  float: inline-start;
-  margin-left: 240px;
+  width: 100%;
 }
 
 .form {
-  margin-left: 155px;
+  margin-left: 145px;
+  margin-top: 40px;
+  float: left;
 }
